--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f0ebe0;
+    background-color: #fbf9f6;
     margin:40px auto;
     max-width:640px;
     line-height:1.6;
