--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@ body {
     line-height:1.6;
     font-size:18px;
     color:#111;
-    padding:0 10px
+    padding:0 10px;
+    font-family: "Arial";
 }
 
 h1,h2,h3 {
